--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -8,3 +8,29 @@
   max-height:200px;
   overflow:scroll;
 }
+
+
+/* css grid */
+
+.grid-container {
+  display: grid;
+  grid-gap: 10px;
+  padding: 10px;
+}
+.grid-item {
+  text-align: left;
+  padding: 20px;
+  font-size: 30px;
+}
+.item1 {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+}
+.item2 {
+  grid-column: 3;
+  grid-row: 1 / span 2;
+}
+.item5 {
+  grid-column: 1 / span 3;
+  grid-row: 3;
+}
