--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,3 +1,8 @@
+.dashboard {
+  max-width:1024px;
+  margin:0px auto;
+}
+
 
 .container{
   margin:20px;
@@ -22,15 +27,16 @@
   padding: 20px;
   font-size: 30px;
 }
-.item1 {
-  grid-column: 1 / span 2;
+
+.item2 {
+  grid-column: 1 / span 3;
   grid-row: 1;
 }
-.item2 {
-  grid-column: 3;
-  grid-row: 1 / span 2;
+.item3 {
+  grid-column: 1 / span 3;
+  grid-row: 2;
 }
-.item5 {
+.item4 {
   grid-column: 1 / span 3;
   grid-row: 3;
 }
