--- a/public/main.css
+++ b/public/main.css
@@ -47,7 +47,7 @@ header {
 header .logo {
   width: 86px;
 }
-header .logo-text {
+.logo-text {
   text-transform: uppercase;
   font-size: 8px;
   font-weight: 600;
@@ -57,7 +57,7 @@ header .logo-text {
   header .logo {
     width: 100px;
   }
-  header .logo-text {
+  .logo-text {
     font-size: 10px;
     letter-spacing: 2px;
   }
@@ -77,7 +77,7 @@ header .logo-text {
     width: 200px;
     margin-bottom: 10px;
   }
-  header .logo-text {
+  .logo-text {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 6.5px;
@@ -92,9 +92,29 @@ header .logo-text {
     width: 300px;
     margin-bottom: 20px;
   }
-  header .logo-text {
+  .logo-text {
     font-size: 18px;
     letter-spacing: 11px;
+  }
+  .item1 {
+    grid-column: 1 / span 1;
+    grid-row: 1;
+  }
+  .item2 {
+    grid-column: 2 / span 1;
+    grid-row: 1;
+  }
+  .item3 {
+    grid-column: 1 / span 1;
+    grid-row: 2;
+  }
+  .item4 {
+    grid-column: 2 / span 1;
+    grid-row: 2;
+  }
+  .item5 {
+    grid-column: 1 / span 2;
+    grid-row: 3;
   }
 }
 
@@ -453,4 +473,16 @@ footer a {
   .internal-links {
     text-align: left;
   }
+}
+
+
+
+.item2 {
+      min-height:400px;
+}
+
+
+.item2 span {
+  height: 90px;
+  line-height: 90px;
 }
