--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -19,8 +19,8 @@
 
 .grid-container {
   display: grid;
-  grid-gap: 10px;
-  padding: 10px;
+  grid-gap: 2em;
+  grid-row-gap:2em;
 }
 .grid-item {
   text-align: left;
@@ -28,4 +28,5 @@
   font-size: 30px;
 }
 
+grid-row-gap: 1em;
 
